[project]
name = "grover-adaptive-search-for-hubo"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "ipykernel>=7.3.0",
    "matplotlib>=3.11.0",
    "numpy>=2.5.0",
    "qiskit>=2.5.0",
    "qiskit-aer>=0.17.2",
    "qiskit-aer-gpu>=0.15.1",
]
